--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-stack-grid",
+  "name": "react-grid-image",
   "version": "0.7.1",
   "description": "Pinterest like layout components for React.js",
   "main": "lib/index.js",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tsuyoshiwada/react-stack-grid.git"
+    "url": "git+https://github.com/amirSohel007/react-stack-grid"
   },
   "keywords": [
     "react",
@@ -30,12 +30,12 @@
     "pinterest",
     "masonry"
   ],
-  "author": "tsuyoshiwada",
+  "author": "amirSohel007",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tsuyoshiwada/react-stack-grid/issues"
+    "url": "https://github.com/amirSohel007/react-stack-grid/issues"
   },
-  "homepage": "https://github.com/tsuyoshiwada/react-stack-grid#readme",
+  "homepage": "https://github.com/amirSohel007/react-stack-grid#readme",
   "files": [
     "lib",
     "test"
@@ -70,9 +70,9 @@
     "gh-pages": "^1.0.0",
     "jest": "^21.2.1",
     "rc-slider": "^8.2.0",
-    "react": "^15.5.4",
+    "react": "^18.2.0",
     "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^18.2.0",
     "react-hot-loader": "^3.1.3",
     "react-router": "^3.0.0",
     "react-test-renderer": "^15.6.1",
@@ -107,5 +107,8 @@
     "setupFiles": [
       "./jest/setup.js"
     ]
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
 }
