--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-grid-image",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "description": "Pinterest like layout components for React.js",
   "main": "lib/index.js",
   "scripts": {
@@ -46,10 +46,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^8.0.3",
     "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-power-assert": "^1.0.0",
